--- a/index.html
+++ b/index.html
@@ -247,48 +247,30 @@ document.addEventListener('DOMContentLoaded', ()=>{
       </div>
     </section>
 
-    <!-- ABOUT -->
+   <!-- ABOUT -->
 <section id="view-about" class="hidden">
   <div class="panel card">
     <h3 class="title" style="margin-top:0">Sobre aquesta eina</h3>
     <p class="subtitle">
-      <strong>FocusQuiz</strong> és una plataforma educativa creada per <strong>Focus Academy</strong> perquè els alumnes puguin practicar,
-      aprendre i millorar des de casa o a l’aula. No cal cap registre ni compte: totes les dades es guarden localment al navegador,
-      garantint privadesa i seguretat per a l’usuari.
+      Web single-file creada per Focus Academy, sense comptes ni dependències.  
+      Dades locals al navegador.
     </p>
 
-    <ul>
-      <li>
-        <strong>Continguts adaptats al currículum escolar:</strong> preguntes interactives de
-        <em>Matemàtiques</em> (aritmètica, fraccions, percentatges, equacions, geometria, estadística i unitats),
-        <em>Llengua catalana i castellana</em> (ortografia, categories gramaticals i sintaxi),
-        i <em>Química</em> (elements, fórmules i compostos).
-      </li>
+    <p>
+      Generador de preguntes per a Matemàtiques (aritmètica, fraccions, percentatges, equacions, geometria, estadística, unitats),  
+      Llengua catalana i castellana (ortografia, categories gramaticals, sintaxi),  
+      Química (elements, fórmules i compostos)  
+      i Geografia (països, capitals i banderes).
+    </p>
 
-      <li>
-        <strong>Tutor virtual intel·ligent:</strong> analitza els resultats i recomana els temes que cada alumne hauria de repassar
-        per continuar millorant, fomentant l’aprenentatge personalitzat.
-      </li>
+    <p>
+      Temps opcional, nivell 1–4, i repàs de només les preguntes errònies.  
+      Historial exportable a CSV i mode offline (funciona sense internet).
+    </p>
 
-      <li>
-        <strong>Configuració flexible:</strong> pots triar el nombre de preguntes, el nivell (1–4), i activar o no el comptador de temps.
-        També pots fer un repàs només de les preguntes errònies per reforçar els punts febles.
-      </li>
-
-      <li>
-        <strong>Pràctica amb o sense dispositius:</strong> imprimeix o exporta les activitats en PDF perquè l’alumne les faci en paper,
-        i després les corregeixi a l’aplicació. Ideal per a entorns escolars o per a ús domèstic sense connexió constant.
-      </li>
-
-      <li>
-        <strong>Aprenentatge segur i motivador:</strong> sense publicitat, sense dades personals, i amb un disseny pensat perquè
-        els nens i nenes aprenguin d’una forma agradable, autònoma i guiada.
-      </li>
-    </ul>
-
-    <p style="margin-top:1em">
-      FocusQuiz és una eina creada per mestres amb una missió clara:
-      <em>fer que l’aprenentatge diari sigui més senzill, efectiu i divertit</em>.
+    <p>
+      Compartició d’activitats: imprimeix o exporta en PDF un conjunt d’exercicis perquè l’alumne els faci en paper  
+      i els corregeixi després a l’aplicació. Ideal per a entorns sense dispositius electrònics constants.
     </p>
   </div>
 </section>
